# pure-lang

./: .gitignore  .hgignore  .hgtags  README.md  README.text  index.html  styles.css
docs/: index.html
faust2pd/: ChangeLog  Makefile  README  faust2pd.html  faust2pd.pure  faustxml.pure
gnumeric-pure/: ChangeLog  Makefile  README  gnumeric-pure.html  pure-examples.gnumeric
lv2-pure/: README  lv2-manifest-template.ttl  lv2pure.c  pure2lv2
markdown/: bugs.html  bugs.md  faust2pd.html  faust2pd.md  gnumeric-pure.html  index.html  index.md  install.html  install.md  john-full.css  modern.css  pd-faust.html  pd-faust.md  pd-pure.html  pd-pure.md  pure-audio.html  pure-avahi.html  pure-avahi.md  pure-bonjour.html  pure-bonjour.md  pure-csv.html  pure-csv.md  pure-doc.html  pure-doc.md  pure-fastcgi.html  pure-faust.html  pure-faust.md  pure-ffi.html  pure-g2.html  pure-g2.md  pure-gen.html  pure-gen.md  pure-gl.html  pure-gl.md  pure-glpk.html  pure-glpk.md  pure-gplot.html  pure-gplot.md  pure-gsl.html  pure-gsl.md  (+75 more)
pd-faust/: Makefile  Makefile.common  Makefile.config  Makefile.config.in  README  TODO  faust~.pure  fdsp~.pure  fsynth~.pure  midiseq.pure  oscseq.pure  pdfaust.pure  pdfaustui.pure
pd-pure/: COPYING  Makefile  README  pd-pure.html  pure.c
pure/: ChangeLog  INSTALL  Makefile.in  NEWS  README  TODO  acinclude.m4  config.h.in  configure  configure.ac  expr.cc  expr.hh  funcall.h  gsl_structs.h  install-docs.sh  interpreter.cc  interpreter.hh  lexer.ll  lexerdefs.hh  make-all.sh  matcher.cc  matcher.hh  parser.yy  parserdefs.hh  preamble.tex  printer.cc  printer.hh  pure.1  pure.1.in  pure.cc  pure.html  pure.pc.in  pure.txt  pure_main.c  pure_norl.cc  purelib.html  purelib.txt  puretut.txt  run-test.in  run-tests  (+9 more)
pure-audio/: Makefile  Makefile.common  README  audio.c  audio.pure  portaudio.pure
pure-avahi/: Makefile  README  avahi.c  avahi.pure  zeroconf.pure
pure-bonjour/: Makefile  README  bonjour.c  bonjour.pure  zeroconf.pure
pure-csv/: COPYING  Makefile  README  csv.c  csv.pure  pure-csv.html  run-tests
pure-doc/: Makefile  README  fixdoc  pure-doc.cc  pure-doc.html  pure-doc.ll
pure-fastcgi/: Makefile  README  fastcgi.c  fastcgi.pure  fastcgi_extra.c  pure-fastcgi.html
pure-faust/: Makefile  README  faust.cc  faust.pure  (+2 more)
pure-gen/language-c/: AUTHORS  AUTHORS.c2hs  ChangeLog  LICENSE  README  language-c.cabal
pure-gen/language-c/src/Language/: C.hs
pure-gen/language-c/src/Language/C/: Analysis.hs  Data.hs  Parser.hs  Pretty.hs  Syntax.hs
pure-gen/language-c/src/Language/C/Analysis/: AstAnalysis.hs  AstAnalysis.hs-boot  Builtins.hs  ConstEval.hs  Debug.hs  DeclAnalysis.hs  DefTable.hs  Export.hs  NameSpaceMap.hs  SemError.hs  SemRep.hs  TravMonad.hs  TypeCheck.hs  TypeConversions.hs  TypeUtils.hs
pure-gen/language-c/src/Language/C/Data/: Error.hs  Ident.hs  InputStream.hs  Name.hs  Node.hs  Position.hs  RList.hs
pure-gen/language-c/src/Language/C/Parser/: Builtin.hs  Lexer.x  Parser.y  ParserMonad.hs  Tokens.hs
pure-gen/language-c/src/Language/C/Syntax/: AST.hs  Constants.hs  Ops.hs  Utils.hs
pure-gen/language-c/src/Language/C/System/: GCC.hs  Preprocess.hs
pure/config/: aclocal.m4
pure/debian/: changelog  control  copyright  docs  libpure8.install  pure-dev.install  pure-texmacs.install  pure.install  rules  watch
pure/debian/pcre/: control  rules
pure/etc/: flycheck-pure.el  gpure.lang  pure-highlight.lang  pure-mode.el.in  pure-npp.xml  pure.lang  pure.nanorc  pure.plist  pure.py  pure.ssh  pure.vim  pure.xml
pure/examples/: COPYING  Makefile.in  avltree.pure  binarytrees.pure  combinators.pure  date.pure  do.pure  fibonacci.pure  fork.pure  fortran.f90  fortran.pure  gauss.pure  hello.pure  huffman.pure  life.pure  linalg.pure  lu.pure  lucid.pure  matrix_inversion.pure  msort.pure  poor.c  popen2.pure  purerc.pure  quasiquote.pure  quasiquote1.pure  quasiquote2.pure  recursive.pure  reflection.pure  rules.pure  sample.purerc  sieve.pure  signal.pure  sort.c  sortalgos.pure  spawn.pure  stack.pure  sudoku.pure  symbolic.pure  trace.pure  transitive.pure  (+2 more)
pure/examples/ats_list_demo/: Makefile  ats_list_demo.pure
pure/examples/ats_list_demo/ats_list_demo/CATS/: ats_list_demo.cats
pure/examples/ats_list_demo/ats_list_demo/DATS/: ats_list_demo.dats
pure/examples/ats_list_demo/ats_list_demo/SATS/: ats_list_demo.sats
pure/examples/bitcode/: Makefile  fact.f90  fact.pure  faust_examp.pure  faustui.pure  freeverb.pure  gauss.f90  gauss.pure  gauss_jordan.pure  gslsort.c  gslsort.pure  inline_ats_examp.pure  inline_examp.pure  mygcd.c  mygcd.pure  myinterp.pure  test.dsp  test.pure
pure/examples/hellomod/: Makefile  hello.c  hello.pure
pure/examples/libor/: COPYING  bits.pure  date.pure  dodoc  myutils.html  myutils.pure  queens.html  queens.pure
pure/examples/texmacs/: dejavu.ts  example.tm  init-pure.scm  latex-example.tm  latex.pure  math.tm  pure-input.scm  pure-session-style.ts  pure-session-styles.ts
pure/lib/: array.pure  avltrees.pure  dict.pure  enum.pure  faustui.pure  getopt.pure  heap.pure  math.pure  matrices.pure  pointers.pure  posix.pure  prelude.pure  primitives.pure  quasiquote.pure  quasiquote1.pure  quasiquote2.pure  records.pure  regex.pure  set.pure  strings.pure  system.pure
pure/test/: amd64-linux32.blob  linux-amd64.blob  linux64-amd64.blob  locale.pure  ppc32-linux32.blob  regex_defs.pure  special.pure  test001.pure  test002.pure  test003.pure  test004.pure  test005.pure  test006.pure  test007.pure  test008.pure  test009.pure  test010.pure  test011.pure  test012.pure  test013.pure  test014.pure  test015.pure  test016.pure  test017.pure  test018.pure  test019.pure  test020.pure  test021.pure  test022.pure  test023.pure  test024.pure  test025.pure  test026.pure  test027.pure  test028.pure  test029.pure  test030.pure  test031.pure  test032.pure  test033.pure  (+63 more)
pure/texmacs/plugins/pure/doc/: pure-abstract.en.tm  pure-article.en.tm  pure-descr.en.tm  pure-math.en.tm  pure-texmacs.en.tm  pure.en.tm
pure/texmacs/plugins/pure/progs/: init-pure.scm  pure-input.scm  texmacs.pure
(+1157 files in other folders)
